@@ -47,6 +47,15 @@ $ turnadmin [ -h | --help]
   
 Commands:  
 
+-P, --generate-encrypted-password	Generate and print to the standard
+output an encrypted form of a password (for web admin user, or shared
+secret, or CLI). The value then can be used as a safe key for the password
+storage on disk or in the database. Every invocation for the same password
+produces a different result. The for mat of the encrypted password is:
+$5$<...salt...>$<...sha256(salt+password)...>. Salt is 16 characters,
+the sha256 output is 64 characters. Character 5 is the algorithm id (sha256).
+Only sha256 is supported as the hash function.
+
 -k, --key		Generate key for a long-term credentials mechanism user.
 
 -a, --add       	Add or update a long-term user.
@@ -104,8 +113,14 @@ Options with required values:
 --total-quota	Set value of realm's total-quota parameter.
 --user-quota	Set value of realm's user-quota parameter. 
 -h, --help		Help.
-  
-Generate a key:  
+
+Command examples:  
+
+Generate an encrypted form of a password:
+
+$ turnadmin -P -p <password>
+
+Generate a key:
 
 $ turnadmin -k -u <username> -r <realm> -p <password>
   
